--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "",
   "projects": {
-    "office-addin-AAD-auth2": {
+    "addin": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -70,18 +70,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "office-addin-AAD-auth2:build"
+            "browserTarget": "addin:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "office-addin-AAD-auth2:build:production"
+              "browserTarget": "addin:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "office-addin-AAD-auth2:build"
+            "browserTarget": "addin:build"
           }
         },
         "test": {
@@ -118,11 +118,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "office-addin-AAD-auth2:serve"
+            "devServerTarget": "addin:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "office-addin-AAD-auth2:serve:production"
+              "devServerTarget": "addin:serve:production"
             }
           }
         }
@@ -254,5 +254,5 @@
       }
     }
   },
-  "defaultProject": "office-addin-AAD-auth2"
+  "defaultProject": "addin"
 }
